fix: fix popup on mobile

--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -37,7 +37,7 @@
 
 		@include responsive(tab-port) {
 			width: 100%;
-			display: inline-block;
+			display: flex;
 		}
 	}
 
